# teste_eng_dados

./: .gitignore  README.md  main.ipynb  pyproject.toml  requirements.txt
consultas_sql/: lucro_bruto.sql  total_liquido.sql
data_files/: setup.py
data_files/database/: desafio_engenheiro.sql
teste_eng_dados_lambda/: setup.py
