[tool.poetry]
name = "teste-eng-dados-lambda"
version = "0.1.0"
description = ""
authors = ["Vic <vitcorreas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.4.1"
ipython = "^8.15.0"
pillow = "^10.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
